2004-08-03  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/driver.c (handle_dumper_result, handle_chunker_result):
	  Don't call free_serial().
	* server-src/driver.c (dumper_result): Call free_serial_dp(dp).
	* server-src/driverio.c (dumper_cmd): Remove CONTINUE cmd.
        * server-src/driverio.c (chunker_cmd): Print serial number for CONTINUE
          command.
        * server-src/driverio.c (disk2serial): Try to find a 'dp' before
          allocating a new serial.
	* server-src/driverio.c (free_serial_dp): New function to remove the
	  serial for a dp.
	* server-src/driverio.h (free_serial_dp): Prototype.
        * server-src/chunker.c (databuf_flush): Read serial number for CONTINUE
          command.

2004-08-03  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/planner.c (getsize): Do SERVER estimate, call sendsize with
	  CALCSIZE estimate.

2004-08-03  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* client-src/calcsize.c: Support exclude and include like gnutar,
	  change in program argument.
	* client-src/sendsize.c: Execute calcsize as requested.
	* common-src/amfeatures.h (fe_calcsize_estimate): New feature.
	* common-src/amfeatures.c (am_init_feature_set): set
	  fe_calcsize_estimate.
	* server-src/amcheck.c (start_host): Check if client support CALCSIZE
	  estimate.

2004-08-03  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/conffile.h (ES_CLIENT, ES_SERVER, ES_CALCSIZE): New define
	  for estimate type.
	* server-src/conffile.h (dumptype_t): Add 'estimate' and 's_estimate'
	* server-src/conffile.c (get_estimate): New function to parse estimate
	  type, ....
	* server-src/diskfile.c (read_diskline): Copy 'estimate'.
	* server-src/diskfile.h (disk_t): Add 'estimate'.
	* server-src/amadmin.c (disklist_one): Print estimate type.

2004-08-02  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* common-src/match.c (match_tar, tar_to_regex): New fonction similar
	  to the exclude option of tar.