@@ -1,5 +1,10 @@
 2004-08-03  Jean-Louis Martineau <martineau@iro.umontreal.ca>
 
+	* server-src/amstatus.pl.in: Parse CONTINUE and RQ-MORE-DISK line,
+	  print if a dump is waiting for holding disk space (roomq).
+
+2004-08-03  Jean-Louis Martineau <martineau@iro.umontreal.ca>
+
 	* server-src/driver.c (handle_dumper_result, handle_chunker_result):
 	  Don't call free_serial().
 	* server-src/driver.c (dumper_result): Call free_serial_dp(dp).
